<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JogWithMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_match">Find A Runner</string>
    <string name="username">Shirley Miao</string>
    <string name="get_matched">MATCH ME</string>
    <string name="within_network">Friends</string>
    <string name="duration_hint">Select minutes</string>
    <string name="same_gender">Gender</string>
    <string name="proximity">Proximity</string>
    <string name="avg_distance">Average Distance</string>
    <string name="avg_time">Average Time</string>
    <string name="wind_speed">Wind speed</string>
    <string name="temperature">Temp (C)</string>

    <string-array name="distance_array">
        <item>1 km</item>
        <item>2 km</item>
        <item>3 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>15 km</item>
        <item>Half-marathon</item>
        <item>Marathon</item>
    </string-array>
    <string-array name="climate_array">
        <item>Indoors</item>
        <item>Road - Outdoors</item>
        <item>Trail - Outdoors</item>
    </string-array>

    <string name="title_activity_ready">Get Ready To Run</string>

    <!-- ready activity vars -->

    <string name="we_ready">Ready</string>
    <string name="them_ready">Not Ready</string>
    <string name="their_name">Fartur</string>
    <string name="their_loc">Toronto, Canada</string>
    <string name="our_stats_pace">My Pace</string>
    <string name="our_stats_lastdist">My Last Distance</string>
    <string name="their_stats_pace">Pace</string>
    <string name="their_stats_lastdist">Last Distance</string>
    <string name="our_pace">6.4</string>
    <string name="our_lastdist">3.0</string>
    <string name="their_pace">8.4</string>
    <string name="their_lastdist">5.0</string>

    <!-- stats activity vars -->
    <string name="title_activity_stats">StatsActivity</string>
    <string name="their_curr_pace">7.4</string>
    <string name="their_curr_time">21:34</string>
    <string name="distance">Distance</string>
    <string name="pace">Pace</string>
    <string name="your_curr_pace">5.0</string>
    <string name="your_curr_time">15:64</string>
    <string name="title_activity_after_run_stats">After Run Stats</string>
    <string name="title_activity_running">Running Stats</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- login activity -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="logout_label">Logout</string>
    <string name="title_activity_matching">MatchingActivity</string>
    <string name="title_activity_countdown">CountdownActivity</string>

</resources>
