<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hackwestern.jogwithme.MatchActivity"
    android:orientation="vertical"
    >

    <!--User information container-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0099CC"
        android:orientation="horizontal">
        <!--Image container-->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="#ffffff"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:text="YOUR STATS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/avg_distance"
                        android:text="@string/avg_distance"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/avg_distance_value"
                        android:text="11.4 km"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/avg_time"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/avg_time_value"
                        android:text="43 minutes"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:text="Distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ff2d2d2d"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/distance"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:entries="@array/distance_array">
        </Spinner>

        <TextView
            android:text="Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ff2d2d2d"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/duration"
            android:layout_width="fill_parent"
            android:paddingLeft="20dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/duration_hint"
            android:inputType="numberDecimal"
            />i9  6

        <!--Type "card"-->
        <TextView
            android:text="Environment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ff2d2d2d"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/climate"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:entries="@array/climate_array">
        </Spinner>

        <!--Climate current "card"-->
        <TextView
            android:text="Filter runners by:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ff2d2d2d"
            android:textSize="16dp" />

        <!--Other options "card"-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/filter_network"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/within_network"/>
            <CheckBox
                android:id="@+id/filter_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/same_gender"/>
            <CheckBox
                android:id="@+id/filter_proximity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/proximity"/>
        </LinearLayout>

        <!--Button-->
        <Button
            android:text="@string/get_matched"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="createMatch" />
    </LinearLayout>
    <!--Distance "card"-->

</LinearLayout>
